--- a/test.ipynb
+++ b/test.ipynb
@@ -2,8 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa2fb0e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "\n",
+    "# model_name = \"FacebookAI/roberta-base\"\n",
+    "\n",
+    "# # Load tokenizer\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "\n",
+    "# # Load model with classification head\n",
+    "# # num_labels = number of classes in your dataset\n",
+    "# model = AutoModelForSequenceClassification.from_pretrained(model_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ac5d71cc",
    "metadata": {},
    "outputs": [
     {
@@ -12,22 +31,22 @@
      "text": [
       "/Users/prakashkumar/Desktop/model_weights/venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at FacebookAI/roberta-base and are newly initialized: ['classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
+      "/Users/prakashkumar/Desktop/model_weights/venv/lib/python3.13/site-packages/transformers/convert_slow_tokenizer.py:564: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
+      "  warnings.warn(\n",
+      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-v3-base and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
    ],
    "source": [
+    "# Load model directly\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
     "\n",
-    "model_name = \"FacebookAI/roberta-base\"\n",
+    "model_name = \"microsoft/deberta-v3-base\"\n",
     "\n",
     "# Load tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "\n",
-    "# Load model with classification head\n",
-    "# num_labels = number of classes in your dataset\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2)\n"
+    "model = AutoModelForSequenceClassification.from_pretrained( model_name, ignore_mismatched_sizes=True, dtype=\"auto\")"
    ]
   },
   {
@@ -38,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Save locally\n",
-    "save_directory = \"weights\"\n",
+    "save_directory = \"weights_deberta\"\n",
     "tokenizer.save_pretrained(save_directory)\n",
     "model.save_pretrained(save_directory)"
    ]
@@ -47,6 +66,41 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e4e730c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "\n",
+    "# Path to your local model\n",
+    "local_path = \"./weights\"\n",
+    "\n",
+    "# Load tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(local_path)\n",
+    "\n",
+    "# Load model with classification head for 5 classes\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "    local_path,\n",
+    "    num_labels=3,\n",
+    "    ignore_mismatched_sizes=True  # 👈 important\n",
+    ")\n",
+    "\n",
+    "print(model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d1c70a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model.classifier.out_proj)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e91b7f17",
    "metadata": {},
    "outputs": [],
    "source": []
